# lsscsi

./: CMakeLists.txt  CREDITS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  cmake_del_artifacts.sh  config.h.in  config.h.in.cmake  configure  configure.ac  lsscsi.spec
debian/: changelog  control  copyright
doc/: CMakeLists.txt  Makefile.am  Makefile.in  README  cmake_del_artifacts.sh  ls_name_value.8  ls_name_value_rd.8  lsscsi.8  lsscsi_json.8
scripts/: CMakeLists.txt  Makefile.am  ls_name_value
src/: CMakeLists.txt  Makefile.am  Makefile.in  cmake_del_artifacts.sh  ls_name_value_rd.c  lsscsi.c  sg_json.c  sg_pr2serr.c
